--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -53,7 +53,7 @@
             <!-- Dropdown menu -->
             <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
               <%= link_to 'Your Profile', users_profile_path, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
-              <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
+             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo: false }, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
             </div>
           </div>
         <% else %>
@@ -76,7 +76,7 @@
       <%= link_to 'Browse Books', books_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
       <% if user_signed_in? %>
         <%= link_to 'Your Profile', users_profile_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
-        <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
+       <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo: false }, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
       <% else %>
         <%= link_to 'Sign In', new_user_session_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
         <%= link_to 'Sign Up', new_user_registration_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
