--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
+<h2 class="text-2xl font-bold text-center mb-6">Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "space-y-6 max-w-md mx-auto bg-white p-6 rounded-lg shadow-lg" }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <!-- Email Field -->
+  <div class="mb-4">
+    <%= f.label :email, class: "block text-gray-700 font-semibold mb-2" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full p-3 border rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <!-- Submit Button -->
+  <div class="text-center">
+    <%= f.submit "Send me reset password instructions", class: "w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<!-- Additional Links (e.g. Sign in, Sign up) -->
+<div class="text-center mt-4">
+  <%= link_to 'Log in', new_session_path(resource_name), class: "text-blue-500 hover:underline" %>
+  <span class="mx-2">|</span>
+  <%= link_to 'Sign up', new_registration_path(resource_name), class: "text-blue-500 hover:underline" %>
+</div>
