--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -17,14 +17,14 @@
       <!-- Logo -->
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto" src="https://tailwindui.com/plus-assets/img/logos/mark.svg?color=indigo&shade=500" alt="Library Logo">
+          <img class="h-8 w-auto" src="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg" alt="Library Logo">
         </div>
 
         <!-- Navigation Links for larger screens -->
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <%= link_to 'Home', root_path, class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
-            <%= link_to 'Browse Books', books_path, class: 'bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded' %>
+            <%= link_to 'Home', root_path, class: 'hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+            <%= link_to 'Browse Books', books_path, class: 'hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
           </div>
         </div>
       </div>
@@ -53,16 +53,14 @@
             <!-- Dropdown menu -->
             <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
               <%= link_to 'Your Profile', users_profile_path, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
-             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo: false }, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
+              <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo: false }, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
             </div>
           </div>
         <% else %>
           <!-- Show Sign in and Sign up buttons -->
           <div class="flex space-x-4">
-            <%= link_to 'Sign In', new_user_session_path,
-             class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
-            <%= link_to 'Sign Up', new_user_registration_path, 
-            class: 'bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded' %>
+            <%= link_to 'Sign In', new_user_session_path, class: 'hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+            <%= link_to 'Sign Up', new_user_registration_path, class: 'hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
           </div>
         <% end %>
       </div>
@@ -72,14 +70,14 @@
   <!-- Mobile menu for smaller screens -->
   <div class="sm:hidden" id="mobile-menu">
     <div class="space-y-1 px-2 pt-2 pb-3">
-      <%= link_to 'Home', root_path, class: 'block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white' %>
-      <%= link_to 'Browse Books', books_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
+      <%= link_to 'Home', root_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-blue-700' %>
+      <%= link_to 'Browse Books', books_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-blue-700' %>
       <% if user_signed_in? %>
-        <%= link_to 'Your Profile', users_profile_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
-       <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo: false }, class: 'block px-4 py-2 text-sm text-gray-700', role: 'menuitem' %>
+        <%= link_to 'Your Profile', users_profile_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-blue-700' %>
+        <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo: false }, class: 'block px-4 py-2 text-sm text-gray-700 hover:bg-blue-700', role: 'menuitem' %>
       <% else %>
-        <%= link_to 'Sign In', new_user_session_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
-        <%= link_to 'Sign Up', new_user_registration_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white' %>
+        <%= link_to 'Sign In', new_user_session_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-blue-700' %>
+        <%= link_to 'Sign Up', new_user_registration_path, class: 'block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-blue-700' %>
       <% end %>
     </div>
   </div>
