--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true, class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" }) do |f| %>
-  <h2 class="text-center text-2xl font-bold text-gray-700 mb-6">Sign up</h2>
-  <div class="min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-100 to-blue-200 mt-3">
+  <h2 class="text-center text-3xl font-bold text-gray-700">Sign Up</h2>
+  <div class="min-h-screen flex items-center justify-center bg-gradient-to-r ml-4">
     <div class="w-full max-w-xs">
       <!-- Name Field -->
       <div class="mb-4">
